<?xml version="1.0"?>
<package>
  <name>focbox_unity_msgs</name>
  <version>0.0.1</version>
  <description>
    ROS message definitions for the FOCBOX Unity open source motor controller.
  </description>

  <maintainer email="silvagracarafael@gmail.com">Rafael Silva</maintainer>
  <author email="silvagracarafael@gmail.com">Rafael Silva</author>
  <license>MIT</license>

  <url type="website">http://ros.org/wiki/focbox_unity_msgs</url>
  <url type="repository">https://github.mit.edu/racecar/focbox</url>
  <url type="bugtracker">https://github.mit.edu/racecar/focbox/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
